fix p on safari

--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -690,6 +690,11 @@ article {
 				display: none;
 			}
 		}
+		p {
+			max-width: 100%;
+			display: block;
+			float: left;
+		}
 		
 	}
 
